# earthquake-map-generator

./: Cargo.toml  README.md
examples/: sample1.rs
src/: error.rs  generator.rs  lib.rs  main.rs  pointer.rs  setting.rs
