[package]
name = "eq_map_generator"
version = "0.1.0"
authors = ["Yuto Watanabe <yuto.w51942@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
tiny-skia = "0.5.1"
rs_latlon = { git = "https://github.com/yuto51942/rs-latlon-replace", branch="main"}
